--- a/templates/main_spisok.html
+++ b/templates/main_spisok.html
@@ -84,8 +84,10 @@ text-align:center;}
   <br>
   <br>
 </header>
+
 <h2 class="glow">Список студентов INAI.KG</h2>
 <div class="container">
+  {{MyFilter.form}}
   <h2 class="text-center"><u></u></h2><br>
   <table class="table table-dark table-striped">
     <thead>
