--- a/templates/main_new.html
+++ b/templates/main_new.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>{{news.title}}</title>
     <header>
     <!DOCTYPE html>
   <link href="styles/style.css" rel="stylesheet" />
@@ -87,16 +85,121 @@ text-align:center;}
 
 
 </header>
+    <meta charset="UTF-8">
+    <title> Scholarship owners of INAI.KG for 2022-2023 academic year</title>
 </head>
 <body>
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fivypanda.com%2Fblog%2Fwp-content%2Fuploads%2F2021%2F02%2Fscholarships-education-concept-with-graduation-cap-coin-money-saving-grants-education.jpg&f=1&nofb=1&ipt=abf9766ca6f9c9802d4632df95335fd0dcb78532ced981f06d982327e4c8a3d2&ipo=images">
+<h1>Scholarship holders of INAI.KG 2022-23 academic year</h1>
+  <p>The Kyrgyz-German Institute of Applied Informatics, together with the West-Saxon University of Applied Sciences (WHZ), Zwickau, implements scholarship programs through the DAAD service, both for undergraduate and graduate programs.
 
-    <h2>{{news.title}}</h2>
-    <div>
-        <img src="{{news.image.url}}" width="1920" height="1080">
-        <h3>{{news.content}}</h3>
-    </div>
+      The amount of an academic scholarship at INAI.KG allows you to fully or partially cover the cost of a student's education.
 
+      The management of INAI.KG congratulates the following students on receiving scholarships from DAAD.</p>
+<h2>
+<div>
+    <hr>
+  AIN-1-22
+    <br> <hr>
+Abdurayimov Chyngyz <br>
+Berdikozhoev Sanzhar      <br>
+Gainazarov Abdulazizbek <br>
+Zhusubalieva Altynai<br>
+Kubanychbek uulu Aziz<br>
+Maksutova Azima<br>
+Polotov Arlen<br>
+Rysbekov Sultanbek<br>
+Takhirova Kyz Saikal<br>
+Tolomushov Bakai<br>
+Urmatov Zhamin<br>
+Shadybekov Argen<br>
+Shakhabidin uulu Nurbolot<br>
+<hr>
+<div>AIN-2-22
+  <br> <hr>
+Akkabatov Bektur <br>
+Berdikozhoev Sanzharbek <br>
+Ibraev Evgeniy <br>
+Koso-Ogly Ruslan <br>
+Kozhoev Mamazait <br>
+</div>
+<hr>
+WIN-1-22
+<hr>
+Baktybekov Nursultan<br>
+Chunueva Asem<br>
+<hr>
+AIN-1-21
+<hr>
+Abylgaziev Kairat<br>
+Akmatov Tariel<br>
+Amangeldieva Nuri<br>
+Baiterekova Nuraiym<br>
+Goloshchapov Nikolay<br>
+Jeenbekov Erbol<br>
+Zarylbekova Mira<br>
+Madumarova Aizat<br>
+Musayeva Adela<br>
+Umurzakov Diyorbek<br>
+Yugay Ilya<br>
+<hr>
+AIN-2-21
+    <hr>
+Alipsatarova Karina<br>
+Jamalidin kyzy Aigul<br>
+Maratova Diana<br>
+Satiev Bekzhan<br>
+<hr>
+WIN-1-21 <hr>
 
+Asylbekova Astra<br>
+Zulfibayeva Bermet<br>
+Imaraliev Baisal<br>
+Maasaliev Bektur<br>
+Sagynbekova Ayana<br>
+Ulanbekov Bektur<br>
+Shamilbek Arslan<br>
+<hr>
+MIN-1-21
+<hr>
+Bayazbekova Adel<br>
+Polovinkina Valeria<br>
+Sazanov Dastan<br>
+Erkinbek kyzy Akbermet<br>
+<hr>
+AIN-1-20
+<br> <hr>
+Kubatbekov Alaken<br>
+Chandaev Bekzhan<br>
+Kushtarbekov Kubanychbek<br>
+Budaichieva Aigerim<br>
+Sharshenkulov Aidar<br>
+Sultanova Cholpon<br>
+Aidarov Omurbek<br>
+Duishenaliev Adil<br>
+Rustamov Artur<br>
+Charginov Marcel<br>
+Kerimov Adis<br>
+Kurmangozhoeva Saadat<br>
+<hr>
+WIN-1-20
+  <br> <hr>
+Omurkanov Askar<br>
+Amiraev Aziz<br>
+Abdrasulov Adil<br>
+<hr>
+MIN-1-20
+  <br> <hr>
+Toktoralieva Aruuke<br>
+Orozbekova Kyzzhibek<br>
+Jarasheva Ayan <br>
+<hr>
+AIN-1-19
+<br> <hr>
+Nurmatov Muratbek   <br>
+Mamytova Janylay   <br>
+Botaliev Atay <br>
+</h2>
 <footer>
   <br>
   <br>
