--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Главная</title>
+<title>MAIN</title>
 <body>
 <header>
     <!DOCTYPE html>
@@ -77,7 +77,7 @@ text-align:center;}
 </style>
 
 <a href="https://inai.kg/"> <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Finai.kg%2Fogassets%2Fog-image.jpg&f=1&nofb=1&ipt=b3a45056c6bb49c42fef8fa79149ec728cfc8dc4da31188ac4ea1291b72dab68&ipo=images" width="100" height="100"></a><a href="https://www.daad.de/de/"> <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Finai.kg%2Fuploads%2Fposts%2Ftinymce%2Fimg_WEwoU2xUZI_27-02-2020.jpg&f=1&nofb=1&ipt=28b6fa2854ff817ff2e68f53edef7226a53a268a65c9199ea7811be9ad5f4be9&ipo=images" width="600" height="100"></a><a href="http://127.0.0.1:8000/admin/login/?next=/admin/"><input type="button" value="Admin-site" class="right"></a>
-    <div class="btn-group"><a href="/main_page/"><h2><button>Главная</button></h2></a> <h2><a href="/main_spisok/"><button>Список</button></a></h2> <a href="/news_list/"><h2><button>Новости</button></h2></a></div>
+    <div class="btn-group"><a href="/main/"><h2><button>MAIN</button></h2></a> <h2><a href="/main_spisok/"><button>LIST OF STUDENTS</button></a></h2> <a href="/news_list/"><h2><button>NEWS</button></h2></a></div>
   <br>
   <br>
   <br>
@@ -88,20 +88,26 @@ text-align:center;}
 
 </header>
 <center>
-    <div> <h1 class="glow">Главная Страница База Данных Стипендиатов</h1></div>
+    <div> <h1 class="glow">MAIN PAGE</h1></div>
  </center>
 
 <div>
     <center>
-    <h2>Стипендиаты КГИПИ 2022-23 учебного года</h2>
-         <a href="https://inai.kg/post/stipendiaty-kgipi-2022-23-uchebnogo-goda"><h3>Подробнее</h3></a>
-    <img src="https://inai.kg/uploads/posts/219/image_1664443376.jpg">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fivypanda.com%2Fblog%2Fwp-content%2Fuploads%2F2021%2F02%2Fscholarships-education-concept-with-graduation-cap-coin-money-saving-grants-education.jpg&f=1&nofb=1&ipt=abf9766ca6f9c9802d4632df95335fd0dcb78532ced981f06d982327e4c8a3d2&ipo=images" width="500" height="385">
+    <h2>Scholarship holders of INAI.KG 2022-23 academic year</h2>
+         <a href="/main_new/"><h3>More</h3></a>
 </center>
 </div>
 
-   <footer>
-
-  </footer>
+<footer>
+  <br>
+  <br>
+  <p>Official website :<a href="https://inai.kg/">inai.kg</a><br>
+  Contacts: <a href="https://mail.google.com/mail/u/0/#drafts?compose=CllgCJlDTWZSqvNfmBrcDDXBWTGfPBrwRgRpSghzRnJJWVLQVsPRWQFQbbQzDSBRFGlcwnGgpLV">info@inai.kg</a>  <br>
+    <br>
+    <br>
+  </p>
+</footer>
 
 </body>
 </html>
