--- a/templates/main_spisok.html
+++ b/templates/main_spisok.html
@@ -93,6 +93,14 @@ text-align:center;}
 <h2 class="glow">LIST OF SCHOLARSHIP OWNERS INAI.KG</h2>
 <div class="container">
   <h2 class="text-center"><u></u></h2><br>
+  <form method="get">
+    {{myFilter.form}}
+<button class="just-button" type="submit">
+  Filter
+</button>
+  </form>
+
+
   <table class="table table-dark table-striped">
     <thead>
       <tr>
